Fixing bugs.  Upload box was out of place
git-svn-id: file:///home/oestrich/tmp/img/trunk@137 ea04b438-0a61-0410-93d0-9bc465a3bab0

--- a/theme/style.css
+++ b/theme/style.css
@@ -26,8 +26,8 @@ a{
 
 #form{
 	position: absolute;
-	left: 10px;
-	top: 40px;
+	left: 50px;
+	top: 235px;
 	background-color: white;
 	color: black;
 	width: 487px;
